# lab6_SYAITP

./: CMakeLists.txt  Main.qml  WeatherAPI.js  WeatherCard.qml  WheatherDisplay.qml  main.cpp
